--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #f8fafc;
+// $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: "Open Sans", sans-serif;
@@ -24,6 +24,7 @@ $grey: #808080;
 $light-font: #cfd8dc;
 $primary: #91ad41;
 $faded-green: #f7f9ef;
+$black: #000;
 
 $theme-colors: (
   primary: #91ad41,
