--- a/resources/sass/components/_social-buttons.scss
+++ b/resources/sass/components/_social-buttons.scss
@@ -4,7 +4,7 @@ a.btn-social,
 .btn-social
 {
     border-radius: 50%;
-    color: #ffffff !important;
+    color: #ffffff;
     display: inline-block;
     height: 54px;
     line-height: 54px;
