--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,3 +79,4 @@
 @import 'components/breadcrumb';
 @import 'components/slider';
 @import 'components/favouriting';
+@import 'components/card-image-top';
