--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,6 +64,7 @@
 @import 'global/main';
 @import 'global/background';
 @import 'global/margin';
+@import 'global/fonts';
 
 /*
 |--------------------------------------------------------------------------
